--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -6,7 +6,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
       name="viewport"
     />
-    <meta name="config" th:content="${config}"/>
+    <meta name="config" th:content="${config}" content='{"topic":"mocktopic","producerPath":"/mockproduce","consumerPath":"/mockconsume"}'/>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
